--- a/app/flowgraph/actions/view/view.html
+++ b/app/flowgraph/actions/view/view.html
@@ -51,6 +51,10 @@
 <script language="JavaScript" defer="defer" src="/js/flowgraph/init.js">
 </script>
 
+<div id="sprite_log" style="width: 600px; height: 300px; border: 1px solid black; overflow: scroll">
+    log...
+</div>
+
 <h1 id="qunit-header">QUnit example</h1>
 <h2 id="qunit-banner"></h2>
 <div id="qunit-testrunner-toolbar"></div>
