--- a/app/flowgraph/actions/view/view.html
+++ b/app/flowgraph/actions/view/view.html
@@ -1,15 +1,47 @@
-<style>
-
-
-</style>
-
 <h1>Project &quot;<%- project.label %>&quot; (<%- project._id.toString() %>)</h1>
 
 <p><%- project.notes %></p>
 
-<canvas width="1200" height="800" id="drawing">
+<link rel="stylesheet" type="text/css" href="/css/flowgraph.css"/>
 
-</canvas>
+
+<div id="canvas_frame">
+    <div id="canvas_inner">
+
+        <div id="item_form" class="edit_form" style="display: none">
+            <div class="item">
+                <label>ID</label>
+                <span id="item_form_item_id">...</span>
+            </div>
+            <div class="item">
+                <label>Name</label>
+                <input type="text" id="item_form_item_name"/>
+            </div>
+            <button id="item_form_button" onclick="update_show_item_form()">Update Item</button>
+        </div>
+
+        <canvas width="1200" height="800" id="drawing">
+
+        </canvas>
+
+        <h1 id="qunit-header">QUnit example</h1>
+
+        <h2 id="qunit-banner"></h2>
+
+        <div id="qunit-testrunner-toolbar"></div>
+        <h2 id="qunit-userAgent"></h2>
+        <ol id="qunit-tests"></ol>
+        <div id="qunit-fixture">test markup, will be hidden</div>
+
+        <div id="sprite_log">
+            log...
+        </div>
+    </div>
+</div>
+
+</div>
+
+<br clear="all"/>
 
 <script language="JavaScript" src="/js/underscore-min.js">
 </script>
@@ -45,19 +77,9 @@
 </script>
 
 <link rel="stylesheet" type="text/css" href="/js/libs/qunit/qunit.css"/>
+
 <script type="text/javascript" src="/js/libs/qunit/qunit.js"></script>
 
 
 <script language="JavaScript" defer="defer" src="/js/flowgraph/init.js">
 </script>
-
-<div id="sprite_log" style="width: 600px; height: 300px; border: 1px solid black; overflow: scroll">
-    log...
-</div>
-
-<h1 id="qunit-header">QUnit example</h1>
-<h2 id="qunit-banner"></h2>
-<div id="qunit-testrunner-toolbar"></div>
-<h2 id="qunit-userAgent"></h2>
-<ol id="qunit-tests"></ol>
-<div id="qunit-fixture">test markup, will be hidden</div>
