--- a/app/flowgraph/actions/view/view.html
+++ b/app/flowgraph/actions/view/view.html
@@ -61,6 +61,9 @@
 <script language="JavaScript" src="/js/flowgraph/sprites/Image.js">
 </script>
 
+<script language="JavaScript" src="/js/flowgraph/sprites/Link.js">
+</script>
+
 <script language="JavaScript" src="/js/flowgraph/sprites/Toolbar.js">
 </script>
 
