--- a/app/flowgraph/actions/view/view.html
+++ b/app/flowgraph/actions/view/view.html
@@ -4,7 +4,28 @@
 
 <link rel="stylesheet" type="text/css" href="/css/flowgraph.css"/>
 
-
+<table id="fg_info">
+    <tr>
+        <th>Mode</th>
+        <th>New</th>
+        <th>Selected</th>
+        <th>Moving</th>
+        <th>Over</th>
+    </tr>
+    <tr>
+        <td id="fg_mode">
+            ---
+        </td>
+        <td id="new_item_info">
+        </td>
+        <td id="selected_item_info">
+        </td>
+        <td id="moving_item_info">
+        </td>
+        <td id="over_item_info">
+        </td>
+    </tr>
+</table>
 <div id="canvas_frame">
     <div id="canvas_inner">
 
