--- a/public/css/flowgraph.css
+++ b/public/css/flowgraph.css
@@ -13,7 +13,11 @@
     width: 600px; height: 300px; border: 1px solid black; overflow: scroll; position: absolute;
 }
 
-
+#fg_info td, #fg_info th {
+    width: 120px;
+    height: 20px;
+    border: 1px solid black;
+}
 
 /* ***************** EDIT FORM *********************** */
 
