--- a/app/flowgraph/actions/view/view.html
+++ b/app/flowgraph/actions/view/view.html
@@ -33,6 +33,8 @@
     <div id="canvas_inner">
 
         <div id="item_form" class="edit_form" style="display: none">
+        <h3>Edit Item</h3>
+        <span class="x" onclick="$('#item_form').close()">X</span>
             <div class="item">
                 <label>ID</label>
                 <span id="item_form_item_id">...</span>
@@ -41,7 +43,33 @@
                 <label>Name</label>
                 <input type="text" id="item_form_item_name"/>
             </div>
+            <div class="item">
             <button id="item_form_button" onclick="update_show_item_form()">Update Item</button>
+            </div>
+        </div>
+        
+        <div id="link_form" class="edit_form" style="display: none">
+        <h3>Edit Line</h3>
+        <span class="x" onclick="$('#link_form').hide()">X</span>
+            <div class="item">
+                <label>ID</label>
+                <span id="link_form_link_id">...</span>
+            </div>
+            <div class="item">
+                <label>Name</label>
+                <input type="text" id="link_form_link_label"/>
+            </div>
+            <div class="item">
+                <label>From (item)</label>
+                <span type="text" id="link_form_from_name"/>
+            </div>
+            <div class="item">
+                <label>To (item)</label>
+                <span type="text" id="link_form_to_name"/>
+            </div>
+            <div class="item">
+            	<button id="link_form_button" onclick="update_show_link_form()">Update Link</button>
+            </div>
         </div>
 
         <canvas width="1200" height="800" id="drawing">
