got connection tool working

--- a/app/flowgraph/actions/view/view.html
+++ b/app/flowgraph/actions/view/view.html
@@ -29,6 +29,7 @@
         </td>
     </tr>
 </table>
+<button id="save_drawing" onclick="flowgraph.save()">Save Drawing</button>
 <div id="canvas_frame">
     <div id="canvas_inner">
 
