Renaming Item !!!! work on style of objects; beginning to work on saving document

--- a/views/header.html
+++ b/views/header.html
@@ -8,5 +8,6 @@
     <a href="/flowgraphs">Flowgraphs</a>
     <% } else { %>
     <a href="/signin">Sign In</a> |
+    <a href="/join">Join</a>
     <% } %>
 </div>
