introducing branch types; abstracted labels for strength

--- a/app/flowgraph/actions/view/view.html
+++ b/app/flowgraph/actions/view/view.html
@@ -52,6 +52,7 @@
                     <option value="minor">Minor Item</option>
                     <option value="normal" selected="selected">Standard Item</option>
                     <option value="major">Major Path Item</option>
+                    <option value="branch">Branch</option>
                 </select>
             </div>
 
