initial easel work

--- a/app/flowgraph/actions/view/view.html
+++ b/app/flowgraph/actions/view/view.html
@@ -53,6 +53,8 @@
                     <option value="normal" selected="selected">Standard Item</option>
                     <option value="major">Major Path Item</option>
                     <option value="branch">Branch</option>
+                    <option value="start">Start</option>
+                    <option value="end">End</option>
                 </select>
             </div>
 
